[gd_scene load_steps=14 format=3 uid="uid://3rua2gpac5p8"]

[ext_resource type="Texture2D" uid="uid://coli0ye4bsyff" path="res://assets/menus/background.png" id="1_2q4rq"]
[ext_resource type="Script" uid="uid://buarre8s3ld28" path="res://scenes/menus/freeplay_menu.gd" id="1_p2lt6"]
[ext_resource type="Script" uid="uid://bbfskuw2fyle3" path="res://scenes/game/tracks.gd" id="2_fq3va"]
[ext_resource type="Script" uid="uid://4r8crqqwxnyk" path="res://scenes/menus/freeplay/info_panel.gd" id="4_5dymk"]
[ext_resource type="FontFile" uid="uid://dipxuxqymub2c" path="res://assets/fonts/vcr-jp.ttf" id="4_7yg7l"]
[ext_resource type="Script" uid="uid://di5oncp1uonwm" path="res://scenes/menus/freeplay/score_panel.gd" id="6_mti1l"]
[ext_resource type="Script" uid="uid://b3d82j8exp4ge" path="res://scenes/menus/freeplay/reset_panel.gd" id="7_detv5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4xxx"]
bg_color = Color(0, 0, 0, 0.5)
corner_radius_bottom_left = 10
expand_margin_left = 8.0
expand_margin_bottom = 8.0

[sub_resource type="LabelSettings" id="LabelSettings_mco15"]
font = ExtResource("4_7yg7l")

[sub_resource type="LabelSettings" id="LabelSettings_1ivw4"]
font = ExtResource("4_7yg7l")
font_size = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7glp"]
bg_color = Color(0, 0, 0, 0.5)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_06b8i"]
font = ExtResource("4_7yg7l")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_s0bc2"]
font = ExtResource("4_7yg7l")
font_size = 10

[node name="freeplay_menu" type="Node2D"]
script = ExtResource("1_p2lt6")
list = Array[String](["tutorial", "bopeebo", "fresh", "dad_battle", "spookeez", "south", "monster", "pico", "philly_nice", "blammed", "satin_panties", "high", "milf", "cocoa", "darnell_bf", "test"])

[node name="track_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="tracks" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_fq3va")
metadata/_custom_type_script = "uid://bbfskuw2fyle3"

[node name="background" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 360)
texture = ExtResource("1_2q4rq")

[node name="songs" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="root_control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="info_panel" type="Panel" parent="root_control" node_paths=PackedStringArray("parent")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 45.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_h4xxx")
script = ExtResource("4_5dymk")
parent = NodePath("../..")

[node name="song_label" type="Label" parent="root_control/info_panel"]
layout_mode = 1
offset_top = 7.0
offset_right = 256.0
offset_bottom = 23.0
size_flags_vertical = 10
text = "Test"
label_settings = SubResource("LabelSettings_mco15")
horizontal_alignment = 1
vertical_alignment = 1

[node name="difficulty_label" type="Label" parent="root_control/info_panel"]
layout_mode = 1
offset_top = 29.0
offset_right = 256.0
offset_bottom = 45.0
size_flags_vertical = 3
text = "< NORMAL >"
label_settings = SubResource("LabelSettings_1ivw4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="score_panel" type="Panel" parent="root_control"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -264.0
offset_top = 80.0
offset_bottom = 176.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i7glp")
script = ExtResource("6_mti1l")

[node name="score_label" type="Label" parent="root_control/score_panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -39.5
offset_bottom = -26.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
text = "Score: N/A"
label_settings = SubResource("LabelSettings_06b8i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="misses_label" type="Label" parent="root_control/score_panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -22.5
offset_bottom = -9.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
text = "Misses: N/A"
label_settings = SubResource("LabelSettings_06b8i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="accuracy_label" type="Label" parent="root_control/score_panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
text = "Accuracy: N/A"
label_settings = SubResource("LabelSettings_06b8i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="rank_label" type="Label" parent="root_control/score_panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 12.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
text = "Rank: N/A"
label_settings = SubResource("LabelSettings_06b8i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="reset_label" type="Label" parent="root_control/score_panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
text = "(R to reset)"
label_settings = SubResource("LabelSettings_s0bc2")
horizontal_alignment = 1
vertical_alignment = 2

[node name="reset_panel" type="Panel" parent="root_control"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -264.0
offset_top = 184.0
offset_bottom = 280.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i7glp")
script = ExtResource("7_detv5")

[node name="question_label" type="Label" parent="root_control/reset_panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.5
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
text = "Are you sure you want to
reset your score?"
label_settings = SubResource("LabelSettings_06b8i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="answers_label" type="Label" parent="root_control/reset_panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 19.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
text = "[Y]es / [N]o"
label_settings = SubResource("LabelSettings_06b8i")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="track_timer" to="." method="_load_tracks"]
